--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -73,6 +73,17 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <ImageButton
+                    android:id="@+id/editBudgetButton"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_edit"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/edit_budget_button_desc"
+                    app:tint="@android:color/black" 
+                    app:layout_constraintTop_toTopOf="@id/balanceLabelTextView"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
                 <TextView
                     android:id="@+id/balanceAmountTextView"
                     android:layout_width="wrap_content"
@@ -82,6 +93,18 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/balanceLabelTextView"
                     tools:text="$3,450 / $5,000" />
+
+                <ImageButton
+                    android:id="@+id/editCategoriesButton"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_edit"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/edit_category_budgets_button_desc"
+                    app:tint="@android:color/black" 
+                    app:layout_constraintTop_toTopOf="@id/budgetCategoriesLabelTextView"
+                    app:layout_constraintBottom_toBottomOf="@id/budgetCategoriesLabelTextView"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
                 <ProgressBar
                     android:id="@+id/budgetProgressBar"
